gcp-deployments/snowplow/kubernetes/services-ingress/collector-service.yml
apiVersion: v1
kind: Service
metadata:
  name: collector-service
  namespace: snowplow
spec:
  type: ClusterIP
  selector:
    app: collector
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5000
